[project]
name = "duckdb-acp-slack"
version = "0.1.0"
description = "Slack bot that uses DuckDB ACP extension to call Claude Code"
requires-python = ">=3.11"
dependencies = [
    "slack-bolt",
    "duckdb==1.4.2",
]

[project.scripts]
duckdb-acp-slack = "duckdb_acp_slack:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/duckdb_acp_slack"]
